AC_INIT([wander], [1.0], [your-email@example.com])
AC_CONFIG_SRCDIR([code/wand1.c])  # Replace with a source file in your project
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Other configuration checks.

AC_OUTPUT
